# XTB_Trading

./: .gitignore  ApiConnection.py  DataCollector.py  DataCollector_in_DF.py  EURUSD_analysis.ipynb  HistoricalDataCollector().py  HistoricalDataCollector.py  README.md  collect_data.ipynb  create_db.py  populate_db.py  populate_prices.py  pyproject.toml  requirements.txt  setup.py  to-data-frame.ipynb  to-data-frame.py  trade_app_db.sqlite
database_operations/: DatabaseConnector.py  DatabaseManager.py  create_db.py  populate_db.py  populate_prices.py
docs/: data.csv  trade_app_db.sqlite
examples/: get-all-symbols.py  get-margin-level.py  get-symbol.ipynb  get-symbol.py  get-trades-history.py
scripts/: ApiConnection.py  DataCollector.py  HistoricalDataCollector.py  StockDataAnalyzer.py
templates/: index.html  layout.html  stock_detail.html
web_app/: app.py
xapi/: exceptions.py
