[project]
name = "XTB-Trades"
version = "0.1.6.1"
authors = [
  { name="Jan Kwiatkowski", email="kwiatkor9@gmail.com" },
]
description = "Trading project based on the xStation5 API Python library"
keywords = [
  "python", "python3", "bitcoin", "trading", "websocket", "trading-api", "forex", "xapi", "forex-trading",
  "exchange-api", "forex-data", "xstation", "xstation5", "xtb", "xopenhub", "forex-api", "xopenhub-api",
  "xtb-api", "xstation-api", "x-trade-brokers", "bfbcapital"
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.7",      #Specify which pyhton versions that you want to support
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "websockets>=11.0.2"
]

[project.urls]
"Homepage" = "https://github.com/jkwiatk1/XTB_Trading"